--- a/.github/workflows/Deploy1.yml
+++ b/.github/workflows/Deploy1.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Navigate to code directory
-        run: cd ${{ github.workspace }}/api_struct
+        run: cd api_struct
 
       - name: Add SSH key
         run: |
